# cleye

./: README.md  cleye.ipynb  cleye.py  pyproject.toml
.github/workflows/: main.yml
